# atcoder

./: .gitignore
elixir/: docker-compose.yml  mix.exs
elixir/lib/: abc.ex  abc065b.ex  abc081a.ex  abc085c.ex  abc088b.ex  abc121_b.ex  abc136c.ex  abc139_b.ex  abc156_c.ex  abc157_b.ex  abc211_c.ex  abc211_d.ex  aflog1.ex  agc002b.ex  agc029_a.ex  agc040_a.ex  arc065_a.ex  codefestival_2016_qualB_b.ex  cvacation.ex  elixir_atcoder.ex  panasonic2020_b.ex  sumitb2019_b.ex
elixir/test/: elixir_atcoder_test.exs
ruby/: abc057_b.rb  abc060_b.rb  abc064_c.rb  abc066_b.rb  abc068_b.rb  abc073_c.rb  abc074_b.rb  abc075_b.rb  abc086_b.rb  abc088_c.rb  abc096_c.rb  abc098_b.rb  abc106_b.rb  abc107_b.rb  abc122_b.rb  abc126_c.rb  abc139_d.rb  abc157_c.rb  abc159_d.rb  abc160_c.rb  abc161_c.rb  abc212_a.rb  abc212_b.rb  abc212_c.rb  abc212_d.rb  abc213_a.rb  abc213_b.rb  abc213_c.rb  abc213_d.rb  abc213_e.rb  abc214_a.rb  abc214_b.rb  abc214_c.rb  abc214_d.rb  abc215_a.rb  abc215_b.rb  abc215_c.rb  abc215_d.rb  abc216_a.rb  abc216_b.rb  (+77 more)
rust/: .tool-versions  Cargo.toml  docker-compose.yml
rust/src/: 188_d.rs  188_e.rs  191_c.rs  192_e.rs  193_d.rs  194_d.rs  194_e.rs  195_d.rs  197_c.rs  197_d.rs  198_e.rs  abc002_4.rs  abc128_c.rs  abc132_c.rs  abc138_d.rs  abc142_c.rs  abc145_c.rs  abc152_a.rs  abc168_d.rs  abc170_a.rs  abc170_b.rs  abc170_d.rs  abc172_c.rs  abc172_d.rs  abc174_c.rs  abc178_a.rs  abc178_d.rs  abc178_e.rs  abc179_e.rs  abc181_e.rs  abc182_e.rs  abc185_a.rs  abc185_f.rs  abc200_d.rs  abc202_d.rs  abc204_d.rs  abc206_d.rs  abc211_d.rs  abc212_e.rs  abc215_d.rs  (+113 more)
rust/src/snippets/: fenwick_tree.rs  mod.rs  multi_set.rs  ncr.rs  sieve.rs
