[package]
name = "atcoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"
itertools = "*"
petgraph = "0.5.0"
num-integer = "*"
num = "0.4.0"

[[bin]]
name = "abc002_4"
path = "src/abc002_4.rs"

[[bin]]
name = "abc128_c"
path = "src/abc128_c.rs"

[[bin]]
name = "abc132_c"
path = "src/abc132_c.rs"

[[bin]]
name = "abc138_d"
path = "src/abc138_d.rs"

[[bin]]
name = "abc142_c"
path = "src/abc142_c.rs"

[[bin]]
name = "abc145_c"
path = "src/abc145_c.rs"

[[bin]]
name = "abc152_a"
path = "src/abc152_a.rs"

[[bin]]
name = "abc170_b"
path = "src/abc170_b.rs"

[[bin]]
name = "abc170_a"
path = "src/abc170_a.rs"

[[bin]]
name = "abc178_a"
path = "src/abc178_a.rs"

[[bin]]
name = "abc185_a"
path = "src/abc185_a.rs"

[[bin]]
name = "abc200_d"
path = "src/abc200_d.rs"

[[bin]]
name = "abc218_d"
path = "src/abc218_d.rs"

[[bin]]
name = "abc218_e"
path = "src/abc218_e.rs"

[[bin]]
name = "abc219_d"
path = "src/abc219_d.rs"

[[bin]]
name = "abc222_d"
path = "src/abc222_d.rs"

[[bin]]
name = "abc222_c"
path = "src/abc222_c.rs"

[[bin]]
name = "abc222_b"
path = "src/abc222_b.rs"

[[bin]]
name = "abc222_a"
path = "src/abc222_a.rs"

[[bin]]
name = "abc225_a"
path = "src/abc225_a.rs"

[[bin]]
name = "abc225_b"
path = "src/abc225_b.rs"

[[bin]]
name = "abc225_c"
path = "src/abc225_c.rs"

[[bin]]
name = "abc225_d"
path = "src/abc225_d.rs"

[[bin]]
name = "abc225_e"
path = "src/abc225_e.rs"

[[bin]]
name = "abc226_a"
path = "src/abc226_a.rs"

[[bin]]
name = "abc226_c"
path = "src/abc226_c.rs"

[[bin]]
name = "abc226_d"
path = "src/abc226_d.rs"

[[bin]]
name = "abc228_d"
path = "src/abc228_d.rs"

[[bin]]
name = "abc229_a"
path = "src/abc229_a.rs"

[[bin]]
name = "abc232_a"
path = "src/abc232_a.rs"

[[bin]]
name = "abc232_b"
path = "src/abc232_b.rs"

[[bin]]
name = "abc233_a"
path = "src/abc233_a.rs"

[[bin]]
name = "abc233_c"
path = "src/abc233_c.rs"

[[bin]]
name = "abc234_d"
path = "src/abc234_d.rs"

[[bin]]
name = "abc236_c"
path = "src/abc236_c.rs"

[[bin]]
name = "abc236_d"
path = "src/abc236_d.rs"

[[bin]]
name = "joi2009ho_b"
path = "src/joi2009ho_b.rs"

[[bin]]
name = "typical90_a"
path = "src/typical90_a.rs"

[[bin]]
name = "typical90_b"
path = "src/typical90_b.rs"

[[bin]]
name = "typical90_c"
path = "src/typical90_c.rs"

[[bin]]
name = "typical90_d"
path = "src/typical90_d.rs"

[[bin]]
name = "typical90_g"
path = "src/typical90_g.rs"

[[bin]]
name = "typical90_h"
path = "src/typical90_h.rs"

[[bin]]
name = "typical90_j"
path = "src/typical90_j.rs"

[[bin]]
name = "typical90_l"
path = "src/typical90_l.rs"

[[bin]]
name = "typical90_n"
path = "src/typical90_n.rs"

[[bin]]
name = "typical90_p"
path = "src/typical90_p.rs"

[[bin]]
name = "typical90_r"
path = "src/typical90_r.rs"

[[bin]]
name = "typical90_t"
path = "src/typical90_t.rs"

[[bin]]
name = "typical90_v"
path = "src/typical90_v.rs"

[[bin]]
name = "typical90_x"
path = "src/typical90_x.rs"

[[bin]]
name = "typical90_z"
path = "src/typical90_z.rs"

[[bin]]
name = "typical90_aa"
path = "src/typical90_aa.rs"

[[bin]]
name = "typical90_ab"
path = "src/typical90_ab.rs"

[[bin]]
name = "typical90_af"
path = "src/typical90_af.rs"

[[bin]]
name = "typical90_ag"
path = "src/typical90_ag.rs"

[[bin]]
name = "typical90_ah"
path = "src/typical90_ah.rs"

[[bin]]
name = "typical90_al"
path = "src/typical90_al.rs"

[[bin]]
name = "typical90_ap"
path = "src/typical90_ap.rs"

[[bin]]
name = "typical90_aq"
path = "src/typical90_aq.rs"

[[bin]]
name = "typical90_ar"
path = "src/typical90_ar.rs"

[[bin]]
name = "typical90_at"
path = "src/typical90_at.rs"

[[bin]]
name = "typical90_av"
path = "src/typical90_av.rs"

[[bin]]
name = "typical90_ax"
path = "src/typical90_ax.rs"

[[bin]]
name = "typical90_az"
path = "src/typical90_az.rs"

[[bin]]
name = "typical90_bc"
path = "src/typical90_bc.rs"
